[package]
name = "homework_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.12", features = ["macros"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
dotenvy = "0.15"
log = "0.4"
pretty_env_logger = "0.5"
chrono = "0.4"
anyhow = "1.0"
rand = "0.8"
rust_xlsxwriter = "0.58"
plotters = { version = "0.3", features = ["bitmap_backend", "bitmap_encoder", "ttf", "image"] }
zip = "0.6"
walkdir = "2.4"
dashmap = "5.5"
futures = "0.3"
tokio-cron-scheduler = "0.9"